--- a/src/.Net/src/MyBank.Mobile/MyBank.Mobile/Views/newuser.xaml
+++ b/src/.Net/src/MyBank.Mobile/MyBank.Mobile/Views/newuser.xaml
@@ -32,7 +32,7 @@
             <Button
                 Grid.Row="5"
                 Command="{Binding NewUser}"
-                Text="Login"/>
+                Text="NewUser"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
