--- a/src/.Net/src/MyBank.Mobile/MyBank.Mobile/Views/payinto.xaml
+++ b/src/.Net/src/MyBank.Mobile/MyBank.Mobile/Views/payinto.xaml
@@ -32,7 +32,7 @@
             <Button
                 Grid.Row="5"
                 Command="{Binding PayInto}"
-                Text="Login"/>
+                Text="PayInto"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
