--- a/src/.Net/src/MyBank.Mobile/MyBank.Mobile/Views/transfere.xaml
+++ b/src/.Net/src/MyBank.Mobile/MyBank.Mobile/Views/transfere.xaml
@@ -46,7 +46,7 @@
             <Button
                 Grid.Row="9"
                 Command="{Binding Transfere}"
-                Text="Login"/>
+                Text="Transfere"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
